force-app/main/default/objects/StudentAndUsernumbers__c/StudentAndUsernumbers__c.object-meta.xml
<CustomObject>
    <label>Student- and Usernumbers</label>
    <nameField>
        <displayFormat>Nr-{000000}</displayFormat>
        <label>Student- and Usernumbers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student- and Usernumbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>