force-app/main/default/objects/StudentAndUsernumbers__c/fields/HigherEducationNumber__c.field-meta.xml
<CustomField>
    <fullName>HigherEducationNumber__c</fullName>
    <inlineHelpText>411, 511</inlineHelpText>
    <label>Higher Education</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>