force-app/main/default/objects/StudentAndUsernumbers__c/fields/isSyncedToAccount__c.field-meta.xml
<CustomField>
    <fullName>isSyncedToAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is synced to account</label>
    <type>Checkbox</type>
</CustomField>