force-app/main/default/objects/StudentAndUsernumbers__c/fields/KindergartenNumber__c.field-meta.xml
<CustomField>
    <fullName>KindergartenNumber__c</fullName>
    <inlineHelpText>111, 121</inlineHelpText>
    <label>Kindergarten</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>