force-app/main/default/objects/StudentAndUsernumbers__c/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <formula>TEXT(Account__r.OperatingCompany__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Company</label>
    <type>Text</type>
</CustomField>