force-app/main/default/objects/StudentAndUsernumbers__c/fields/OtherInstitution__c.field-meta.xml
<CustomField>
    <fullName>OtherInstitution__c</fullName>
    <label>Other Institution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>