force-app/main/default/objects/StudentAndUsernumbers__c/fields/PrimaryEducationNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEducationNumber__c</fullName>
    <inlineHelpText>211, 221</inlineHelpText>
    <label>Primary Education</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>