force-app/main/default/objects/StudentAndUsernumbers__c/fields/SecondaryEducationNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondaryEducationNumber__c</fullName>
    <inlineHelpText>311,321,313,314</inlineHelpText>
    <label>Secondary Education</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>