force-app/main/default/objects/StudentAndUsernumbers__c/fields/SecondaryEducationPartTime__c.field-meta.xml
<CustomField>
    <fullName>SecondaryEducationPartTime__c</fullName>
    <inlineHelpText>312</inlineHelpText>
    <label>Secondary Education - Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>