force-app/main/default/objects/StudentAndUsernumbers__c/fields/TotalNumber__c.field-meta.xml
<CustomField>
    <fullName>TotalNumber__c</fullName>
    <label>Total Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>