force-app/main/default/objects/StudentAndUsernumbers__c/fields/VocationalEducationNumber__c.field-meta.xml
<CustomField>
    <fullName>VocationalEducationNumber__c</fullName>
    <label>Vocational Education Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>