force-app/main/default/objects/StudentAndUsernumbers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Asset__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>TotalNumber__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>